<resources>
    <string name="app_name">KitchenAdventures</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_will_be_your_kitchen_adventure_today">What will be your kitchen adventure today?</string>
    <string name="carrot_cake_oatmeal">Carrot Cake Oatmeal</string>
    <string name="pink_breakfast_jars">Pink Breakfast Jars</string>
    <string name="chocolate_peanut_butter_waffles">Chocolate Peanut Butter Waffles</string>
    <string name="sweet_and_spicy_miso_tofu">Sweet and Spicy Miso Tofu</string>
    <string name="avocado_pesto">Avocado \'Pesto\'</string>
    <string name="meaty_vegan_chili">\'Meaty\' Vegan Chili</string>
    <string name="chocolate_bundt_cake">Chocolate Bundt Cake</string>
    <string name="no_knead_cinnamon_rolls">No Knead Cinnamon Rolls</string>
    <string name="matcha_green_tea_muffins">Matcha Green Tea Muffins</string>

    <string-array name="Recipes">
        <item>Carrot Cake Oatmeal</item>
        <item>Pink Breakfast Jars</item>
        <item>Chocolate Peanut Butter Waffles</item>
        <item>Sweet and Spicy Miso Tofu</item>
        <item>Avocado \'Pesto\'</item>
        <item>\'Meaty\' Vegan Chili</item>
        <item>Chocolate Bundt Cake</item>
        <item>No Knead Cinnamon Rolls</item>
        <item>Matcha Green Tea Muffins</item>
    </string-array>
</resources>
