<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".RecipeList">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/button_recipeList_carrot"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#50000000"
        android:fontFamily="@font/josefin_sans"
        android:text="@string/carrot_cake_oatmeal"
        app:layout_constraintBottom_toTopOf="@+id/button_recipeList_jar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button_recipeList_jar"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="#50000000"
        android:fontFamily="@font/josefin_sans"
        android:text="@string/pink_breakfast_jars"
        app:layout_constraintBottom_toTopOf="@+id/button_recipeList_waffle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_recipeList_carrot"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_recipeList_waffle"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="#50000000"
        android:fontFamily="@font/josefin_sans"
        android:text="@string/chocolate_peanut_butter_waffles"
        app:layout_constraintBottom_toTopOf="@+id/button_recipeList_tofu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_recipeList_jar" />

    <Button
        android:id="@+id/button_recipeList_tofu"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="#50000000"
        android:fontFamily="@font/josefin_sans"
        android:text="@string/sweet_and_spicy_miso_tofu"
        app:layout_constraintBottom_toTopOf="@+id/button_recipeList_pesto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_recipeList_waffle"
        app:layout_constraintVertical_bias="0.615" />

    <Button
        android:id="@+id/button_recipeList_pesto"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="#50000000"
        android:fontFamily="@font/josefin_sans"
        android:text="@string/avocado_pesto"
        app:layout_constraintBottom_toTopOf="@+id/button_recipeList_chili"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_recipeList_tofu" />

    <Button
        android:id="@+id/button_recipeList_chili"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="#50000000"
        android:fontFamily="@font/josefin_sans"
        android:text="@string/meaty_vegan_chili"
        app:layout_constraintBottom_toTopOf="@+id/button_recipeList_chocolate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_recipeList_pesto" />

    <Button
        android:id="@+id/button_recipeList_chocolate"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="#50000000"
        android:fontFamily="@font/josefin_sans"
        android:text="@string/chocolate_bundt_cake"
        app:layout_constraintBottom_toTopOf="@+id/button_recipeList_cinnamon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_recipeList_chili" />

    <Button
        android:id="@+id/button_recipeList_cinnamon"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="#50000000"
        android:fontFamily="@font/josefin_sans"
        android:text="@string/no_knead_cinnamon_rolls"
        app:layout_constraintBottom_toTopOf="@+id/button_recipeList_muffins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_recipeList_chocolate" />

    <Button
        android:id="@+id/button_recipeList_muffins"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="#50000000"
        android:fontFamily="@font/josefin_sans"
        android:text="@string/matcha_green_tea_muffins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_recipeList_cinnamon" />
</android.support.v7.widget.LinearLayoutCompat>